# project-planning

./: README.md
projectplanning-app/: .env  db.sqlite3  pyproject.toml
projectplanning-app/backend/: .gitignore  debug_bonita.py  list_processes.py  pyproject.toml
projectplanning-app/backend/app/: utils.py  views.py
projectplanning-app/backend/app/api/: __init__.py  bonita.py
projectplanning-app/backend/app/controllers/: projects.py
projectplanning-app/backend/app/migrations/: 0001_initial.py  0002_project_case_id.py
projectplanning-app/backend/app/models/: __init__.py  etapa.py  ong.py  organization.py  project.py  proyecto.py  signals.py  user_profile.py
projectplanning-app/backend/app/templates/: alta_proyecto.html  home.html
projectplanning-app/backend/app/views/: project_planning_login.py
projectplanning-app/backend/config/: settings.py  urls.py
projectplanning-app/cloud-api/: .env  pyproject.toml
projectplanning-app/cloud-api/api_core/: settings.py  urls.py
projectplanning-app/cloud-api/api_core/models/: compromiso.py  etapa.py  proyecto.py
projectplanning-app/cloud-api/api_projectplanning/: apps.py  decorators.py  urls.py  views.py
projectplanning-app/cloud-api/api_projectplanning/migrations/: 0001_initial.py  0002_rename_etapa_compromiso_etapa_cloud_and_more.py  0003_alter_compromiso_id_etapa_back_and_more.py  (+2 more)
projectplanning-app/config/: settings.py
projectplanning-app/frontend/: package-lock.json
projectplanning-app/frontend/projectplanning-front/: README.md  package.json
projectplanning-app/frontend/src/: App.vue
(+19 files in other folders)
