[tool.poetry]
name = "projectplanning-app"
version = "0.1.0"
description = ""
authors = ["Juan Pablo Miyagusuku <jpmiya82@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
